--- a/Template/style.css
+++ b/Template/style.css
@@ -14,7 +14,8 @@
 }
 
 body{ 
-    
+    height: 100vh;
+    overflow: hidden;
 }
 
 .main-page {
@@ -23,26 +24,21 @@ body{
     display: flex;
 }
 
-.slide-line{
-    background-color: var(--bg-side-line);
-    height: 100%;
-    width: 25px;
-}
-
 .slide-bar {
-    background-color: var(--bg-slide-bar);
-    height: 100%;
-    width: 15%;   
+    position: absolute;
+    bottom: 0;
+    background-color: var(--bg-side-bar);
+    width: 100%;  
+    max-height: 15%; 
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
-    padding: 5% 0;
+    padding: 5% 15%;
     align-items: center;
     box-shadow: 1px 1px 10px rgb(185, 185, 185);
 }
 .circle{ 
-    height: 75px;
-    width: 75px;
+    height: 50px;
+    width: 50px;
     background-color: var(--bg-circle-icon);
     border-radius: 50%;
     display: flex;
@@ -97,7 +93,7 @@ body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 .tablet-container #table-image{ 
     position: absolute;
